fixed custom cursor on mobile

--- a/source/scss/templates/_cursor.scss
+++ b/source/scss/templates/_cursor.scss
@@ -1,4 +1,5 @@
 .custom-cursor {
+    display: none;
     position: fixed;
     pointer-events: none;
     mix-blend-mode: difference;
